# luajit-cpp-swig-interop

./: .gitignore  CMakeLists.txt  README.md
scripts/: test.lua
src/: example.cpp  example.h  main.cpp
